// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query: getProperty should error when property does not exist 1`] = `"{\\"message\\":\\"property with id 2 does not exist\\",\\"locations\\":[{\\"line\\":2,\\"column\\":3}],\\"path\\":[\\"getProperty\\"],\\"extensions\\":{\\"code\\":\\"NOT_FOUND\\"}}"`;

exports[`Query: getProperty should error when property does not exist 2`] = `
Object {
  "data": Object {
    "getProperty": null,
  },
  "errors": Array [
    [GraphQLError: property with id 2 does not exist],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Query: getProperty should return property 1`] = `
Object {
  "data": Object {
    "getProperty": Object {
      "address": "A test address",
      "bedrooms": 4,
      "id": "1",
      "type": "HOUSE",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
